# h3s-superconductivity-gaia

./: README.md  pyproject.toml
.gaia/: beliefs.json  compile_metadata.json  ir.json  ir_hash
.gaia/manifests/: bridges.json  exports.json  holes.json  premises.json
.github-output/: README.md  manifest.json  narrative-outline.md
.github-output/docs/public/data/: beliefs.json  graph.json  meta.json
.github-output/docs/public/data/sections/: background.md  discovery.md  implications.md  interpretation.md  metallization.md
.github-output/wiki/: Home.md  Inference-Results.md  Module-discovery.md  Module-interpretation.md  Module-metallization.md
artifacts/: paper.md
docs/: detailed-reasoning.md
src/h3s_superconductivity/: __init__.py  background.py  discovery.py  implications.py  interpretation.py  metallization.py  priors.py
